Update example to simplify parameters Our apache-saml2 example uses ${IDP_URL} for the Shibboleth IDP. This gets set, non-obviously, in the Dockerfile. Update the xml file to hard-code the value since we shouldn't have complexity in the example for no good reason.

--- a/apache-saml2/shib/shibboleth2.xml.template
+++ b/apache-saml2/shib/shibboleth2.xml.template
@@ -42,7 +42,7 @@
             <!--
             Configures SSO for a default IdP.
             -->
-            <SSO entityID="${IDP_URL}">
+            <SSO entityID="https://shib.raven.cam.ac.uk/shibboleth">
               SAML2
             </SSO>
 
@@ -74,7 +74,7 @@
 
         <!-- Metadata provider -->
         <MetadataProvider type="XML"
-            url="${IDP_URL}"
+            url="https://shib.raven.cam.ac.uk/shibboleth"
             backingFilePath="${IDP_METADATA_CACHE_FILE}"
             reloadInterval="14400">
         </MetadataProvider>
