--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,13 @@
 .docker-image-build:
   stage: build
-  image: docker:19.03.1
+  image: docker:23-dind
   services:
-    - docker:19.03.1-dind
+    - docker:23-dind
   script:
     - docker info
     - docker login -u "${CI_REGISTRY_USER}" -p "${CI_REGISTRY_PASSWORD}" "${CI_REGISTRY}"
     - docker build -t "${CI_REGISTRY_IMAGE}/${CI_JOB_NAME}" "${CI_JOB_NAME}"
     - docker push "${CI_REGISTRY_IMAGE}/${CI_JOB_NAME}"
-  only:
-    refs:
-      - master
 
 apache-oauth2:
   extends: .docker-image-build
