--- a/apache-saml2/sites/protected.conf
+++ b/apache-saml2/sites/protected.conf
@@ -29,6 +29,7 @@
         # Initiate a new session with Raven SAML 2.0 if one did not previously
         # exist.
         ShibRequireSession On
+	ShibUseEnvironment On
 
         <RequireAll>
             # Require that authentication succeeded.
@@ -48,6 +49,12 @@
             # Require shib-attr groupID 123456
         </RequireAll>
     </Location>
+
+    ProxyPass / http://otterwiki:8080/
+    ProxyPassReverse / http://otterwiki:8080/
+    RequestHeader set x-otterwiki-name %{displayName}e
+    RequestHeader set x-otterwiki-email %{REMOTE_USER}s
+    RequestHeader set x-otterwiki-permissions "READ,WRITE,UPLOAD,ADMIN"
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr et
