Fix (null) value

--- a/apache-saml2/sites/protected.conf
+++ b/apache-saml2/sites/protected.conf
@@ -52,7 +52,9 @@
 
     ProxyPass / http://otterwiki:8080/
     ProxyPassReverse / http://otterwiki:8080/
+
     RequestHeader set x-otterwiki-name %{displayName}e
+    RequestHeader edit x-otterwiki-name "^\(null\)$" %{REMOTE_USER}s
     RequestHeader set x-otterwiki-email %{REMOTE_USER}s
     RequestHeader set x-otterwiki-permissions "READ,WRITE,UPLOAD,ADMIN"
 </VirtualHost>
